Added cancel button at review dialog (shows only when user uses "Open With" option on Windows)

--- a/Subtitle_Laboratory.rc
+++ b/Subtitle_Laboratory.rc
@@ -119,23 +119,24 @@ BEGIN
     GROUPBOX        "Text",IDC_STATIC,7,62,181,54
 END
 
-IDD_REVIEWSRT DIALOGEX 0, 0, 393, 275
+IDD_REVIEWSRT DIALOGEX 0, 0, 393, 272
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "srt_path_filename"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,336,254,50,14
+    DEFPUSHBUTTON   "OK",IDOK,327,249,59,19
     EDITTEXT        IDC_EDIT_SRT_REVIEW,7,7,247,238,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
     CONTROL         "",IDC_LIST_SRT_REVIEW_INFO,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,256,7,130,238
+    PUSHBUTTON      "Cancel",IDCANCEL,267,249,59,19
 END
 
-IDD_GOTOTITLE DIALOGEX 0, 0, 155, 28
+IDD_GOTOTITLE DIALOGEX 0, 0, 155, 24
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Go to title..."
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,99,7,50,14
-    EDITTEXT        IDC_EDIT_GOTO_INDEX,7,7,92,14,ES_AUTOHSCROLL | ES_NUMBER
+    DEFPUSHBUTTON   "OK",IDOK,98,4,53,16
+    EDITTEXT        IDC_EDIT_GOTO_INDEX,4,5,92,15,ES_AUTOHSCROLL | ES_NUMBER
 END
 
 IDD_ERRORREPORT DIALOGEX 0, 0, 273, 107
@@ -170,7 +171,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 386
         TOPMARGIN, 7
-        BOTTOMMARGIN, 268
+        BOTTOMMARGIN, 265
     END
 
     IDD_GOTOTITLE, DIALOG
@@ -178,7 +179,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 148
         TOPMARGIN, 7
-        BOTTOMMARGIN, 21
+        BOTTOMMARGIN, 17
     END
 
     IDD_ERRORREPORT, DIALOG
