--- a/Subtitle_Laboratory.rc
+++ b/Subtitle_Laboratory.rc
@@ -130,13 +130,14 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,267,249,59,19
 END
 
-IDD_GOTOTITLE DIALOGEX 0, 0, 155, 24
+IDD_GOTOTITLE DIALOGEX 0, 0, 183, 24
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Go to title..."
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,98,4,53,16
+    DEFPUSHBUTTON   "OK",IDOK,98,4,39,16
     EDITTEXT        IDC_EDIT_GOTO_INDEX,4,5,92,15,ES_AUTOHSCROLL | ES_NUMBER
+    PUSHBUTTON      "Cancel",IDCANCEL,138,4,39,16
 END
 
 IDD_ERRORREPORT DIALOGEX 0, 0, 273, 107
@@ -177,7 +178,7 @@ BEGIN
     IDD_GOTOTITLE, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 148
+        RIGHTMARGIN, 176
         TOPMARGIN, 7
         BOTTOMMARGIN, 17
     END
