Major features. Opening and saving subtitle projects is added, by big part. Still under development, but feature is expected to be done soon. Also, saving and opening subtitle now operates for both SRT and VTT. Balanced saving and opening file.

--- a/Subtitle_Laboratory.vcxproj
+++ b/Subtitle_Laboratory.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="SubtitleLaboratoryParser.cpp" />
+    <ClCompile Include="VTTSubtitleParser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -150,6 +151,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="SubtitleLaboratoryParser.h" />
     <ClInclude Include="Utilities.h" />
+    <ClInclude Include="VTTSubtitleParser.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Subtitle_Laboratory.rc" />
