Major features and fixes. Project loading and saving fixed, but still possible bugs. New Project and Close Project fixed. So, opening and saving processes work as planned.

--- a/Subtitle_Laboratory.rc
+++ b/Subtitle_Laboratory.rc
@@ -58,6 +58,8 @@ BEGIN
         MENUITEM "Open Project",                ID_FILE_OPENPROJECT
         MENUITEM "Save Project",                ID_FILE_SAVEPROJECT
         MENUITEM SEPARATOR
+        MENUITEM "Close Project",               ID_FILE_CLOSEPROJECT
+        MENUITEM SEPARATOR
         MENUITEM "New Subtitle",                ID_FILE_NEWSUBTITLE
         MENUITEM "Open Subtitle",               ID_FILE_OPENSUBTITLE
         MENUITEM "Save Subtitle",               ID_FILE_SAVESUBTITLE
@@ -155,7 +157,7 @@ BEGIN
     LTEXT           "Name",IDC_STATIC,39,20,17,8
     EDITTEXT        IDC_EDIT_PROJECT_AUTHOR,61,35,224,14,ES_AUTOHSCROLL
     LTEXT           "Author",IDC_STATIC,36,36,22,8
-    EDITTEXT        IDC_EDIT_PROJECT_DESCRIPTION,61,53,224,40,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PROJECT_DESCRIPTION,61,53,224,40,ES_MULTILINE | ES_AUTOVSCROLL | WS_VSCROLL
     LTEXT           "Description",IDC_STATIC,22,51,37,8
     GROUPBOX        "Project Path",IDC_STATIC,6,118,296,40
     COMBOBOX        IDC_COMBO_PROJECT_TITLE_PARSER,24,176,261,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
