Some error dialog box improvements.

--- a/Subtitle_Laboratory.rc
+++ b/Subtitle_Laboratory.rc
@@ -125,14 +125,13 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,138,4,39,16
 END
 
-IDD_ERRORREPORT DIALOGEX 0, 0, 273, 107
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+IDD_ERRORREPORT DIALOGEX 0, 0, 273, 81
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,208,80,58,20
-    CONTROL         "",IDC_LIST_ERRORS_INFO,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,259,71
-    LTEXT           "Static",IDC_STATIC_ERROR_REPORT,7,80,196,20
+    DEFPUSHBUTTON   "OK",IDOK,207,57,60,20
+    CONTROL         "",IDC_LIST_ERRORS_INFO,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,259,47
+    LTEXT           "Static",IDC_STATIC_ERROR_REPORT,7,58,196,19,WS_BORDER
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 205, 72
@@ -199,7 +198,7 @@ BEGIN
         RIGHTMARGIN, 266
         VERTGUIDE, 135
         TOPMARGIN, 7
-        BOTTOMMARGIN, 100
+        BOTTOMMARGIN, 74
     END
 
     IDD_ABOUT, DIALOG
